Change enum format from number to string in DTOs
