# src/Common/Enums/LayoutItemType.cs
@@ -1,7 +1,7 @@
 namespace KisV4.Common.Enums;
 
-public static class LayoutItemType {
-    public const string SaleItem = "SaleItem";
-    public const string Pipe = "Pipe";
-    public const string Layout = "Layout";
+public enum LayoutItemType {
+    SaleItem = 0,
+    Pipe = 1,
+    Layout = 2
 }
