# src/DAL.EF/Entities/LayoutItem.cs
@@ -1,3 +1,4 @@
+using KisV4.Common.Enums;
 using Microsoft.EntityFrameworkCore;
 
 namespace KisV4.DAL.EF.Entities;
@@ -6,9 +7,8 @@ namespace KisV4.DAL.EF.Entities;
 public abstract record LayoutItem {
     public int X { get; init; }
     public int Y { get; init; }
-    public required string Type { get; init; }
+    public required LayoutItemType Type { get; init; }
 
     public int LayoutId { get; init; }
     public Layout? Layout { get; set; }
 }
-
